--- a/pages/skills.html
+++ b/pages/skills.html
@@ -16,46 +16,38 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
     integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="/images/icon.ico" type="image/x-icon">
   <title>Skills</title>
 </head>
 
 <body class="page-content">
   <nav class="navbar navbar-expand-lg navbar-light menu">
     <div class="container">
-      <a class="navbar-brand" href="/">
-        <img src="/images/LogoMj.png" alt="logo_mj" height="50" width="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Wie ben ik</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="hobby.html">Hobby's</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="experience.html">Ervaringen</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="/">
+            <img src="../images/LogoMj.png" alt="logo_mj" height="50" width="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">Wie ben ik</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hobby.html">Hobby's</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="skills.html">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
   <div class="bgc">
   <div class="container">
     <section class="skills">
@@ -74,7 +66,7 @@
           <div class="card-body">
             <h5 class="card-title">Webdesign</h5>
             <p class="card-text">Een website maken is een leuke manier om mijn ideeën met de wereld te delen. Met mijn
-              kennis van HTML5 en CSS is het voor mijn fijn om dit mogelijk te maken. Om mijn stijlen herbruikbaar te
+              kennis van HTML5 en CSS is het voor mij fijn om dit mogelijk te maken. Om mijn stijlen herbruikbaar te
               maken, vervang ik CSS met SASS.</p>
           </div>
         </div>
@@ -89,7 +81,7 @@
           <div class="card-body">
             <h5 class="card-title">Programmeren</h5>
             <p class="card-text">Wil ik een Deskstop applicatie, een Webapplicatie of een Wep API maken, dan is C# de
-              beste programmeertaal voor mij. Het zij .NET Entity Framework of .NET Core, daar maak ik mijn laptop zeker
+              beste programmeertaal voor mij. Hetzij .NET Entity Framework of .NET Core, daar maak ik mijn laptop zeker
               voor open.</p>
           </div>
         </div>
@@ -104,8 +96,8 @@
           <div class="card-body">
             <h5 class="card-title">Databanken en SQL</h5>
             <p class="card-text">
-              Als programmeurs, maken wij bij het ontwikkelen van een applicaties meestal gebruik van data. Met mijn kennis van relationele databanken,
-               is het makkelijker om gebruiksvriendelijke applicatie te ontwikkelen.
+              Als programmeurs, maken wij bij het ontwikkelen van applicaties meestal gebruik van data. Met mijn kennis van relationele databanken,
+               is het makkelijker om gebruiksvriendelijke applicaties te ontwikkelen.
             </p>
           </div>
         </div>
@@ -115,13 +107,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
           </div>
           <div class="card-body">
             <h5 class="card-title">Javascript</h5>
             <p class="card-text">
               Deze programmeertaal is een slimme manier voor mij om elementen of data van een website te manipuleren. Omdat ik deze programmeertaal
-               begrijp, is minder lastig voor mij om "Frameworks" ervan te kunnen.
+               begrijp, is het minder lastig voor mij om "Frameworks" ervan te kunnen.
             </p>
           </div>
         </div>
@@ -139,11 +130,17 @@
           <div class="text-center">
             <i class="fa fa-handshake"></i>
           </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
           <h3>
             Professioneel communiceren
           </h3>
           <p>
-            Voor mij is communiceren het eerste stapje dat ik onderneem bij het uitvoeren van een taak. Het zij
+            Voor mij is communiceren het eerste stapje dat ik onderneem bij het uitvoeren van een taak. Hetzij
             telefoongesprekken, per mails, of in een vergaderzaal. Hier is het erg belangrijk dat er op een nette manier
             duidelijke afspraken gemaakt worden.
           </p>
@@ -152,11 +149,17 @@
           <div class="text-center">
             <i class="fa fa-tasks"></i>
           </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
           <h3>
             Organiseren en coördineren
           </h3>
           <p>
-            Een fundament hebben is altijd goed om een goed project klaar te zeggen. Om dit te bekomen maak ik altijd
+            Een fundament hebben is altijd goed om een goed project klaar te zetten. Om dit te bekomen maak ik altijd
             een structuur
             van hoe het project aangepakt zal worden. Hier hou ik veel rekening met de eisen van mijn opdrachtgever.
           </p>
@@ -165,16 +168,28 @@
           <div class="text-center">
             <i class="fa fa-code-branch"></i>
           </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
           <h3>
             Beheren en documenteren
           </h3>
-          <p>Ik vind het belangrijk om mijn opdrachtgever en teamgenoten op hoogte te brengen van de ontwikkelingen van
+          <p>Ik vind het belangrijk om mijn opdrachtgever en teamgenoten op de hoogte te brengen van de ontwikkelingen van
             het project. In zo'n geval maak ik documentaties en plan meetingen met de verwachting naar "Feedback". Dit
-            maakt het voor mij beter om aanpassingen te brengen aan het project.</p>
+            maakt het voor mij makkelijker om aanpassingen te brengen aan het project.</p>
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="text-center">
             <i class="fa fa-users"></i>
+          </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half"></i>
           </div>
           <h3>
             In teamverband verwerken
@@ -182,13 +197,19 @@
           <p>
             Ik zeg het altijd: <span class="quote">Je weet wanneer je in een team moet werken.</span>
             In een team ken ik altijd mijn rol en ik zorg er ook voor dat ik mijn taken afkrijg. Voor mij is het
-            belangrijk men in een team veel van elkaar leert. <span class="quote">De afwisselijk is erg
+            belangrijk dat men in een team veel van elkaar leert. <span class="quote">De afwisselijk is erg
               belangrijk.</span>
           </p>
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="text-center">
             <i class="fa fa-sitemap"></i>
+          </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half"></i>
           </div>
           <h3>Agile werken</h3>
           <p>Een goede manier om in agile te werken is scrum. De verdeling van taken in sprints vergemakkelijkt de
@@ -198,33 +219,40 @@
           <div class="text-center">
             <i class="fa fa-lightbulb"></i>
           </div>
+          <div class="rating text-center">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
           <h3>
             Probleemoplossend denken
           </h3>
           <p>Als ik een taak krijg, haal ik papier erbij en begin na te denken en te schetsen wat er van de taak
-            verwaacht wordt. Hier krijgt mijn Google zoekbalk ook een paar beurten: Ik ga opzoeken naar inspiraties. Als
-            ik in teamverband werk en komen wij een probleem tegen, bied ik aan om er een oplossing voor te zoeken. Voor
+            verwacht wordt. Hier krijgt mijn Google zoekbalk ook een paar beurten: Ik ga opzoeken naar inspiraties. Als
+            ik in teamverband werk en wij komen een probleem tegen, bied ik aan om er een oplossing voor te zoeken. Voor
             mij is het dan geen probleem, maar een uitdaging.</p>
         </div>
       </div>
     </section>
+    <footer class="foot">
+      <section class="ft-social">
+        <ul class="ft-social-list">
+          <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
+          <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+      </section>
+      <section class="ft-copy">
+        <div class="sec-copy">
+          <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+        </div>
+      </section>
+    </footer>
   </div>
-  <footer class="foot">
-    <section class="ft-social">
-      <ul class="ft-social-list">
-        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-      </ul>
-    </section>
-    <section class="ft-copy">
-      <div class="sec-copy">
-        <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
-      </div>
-    </section>
-  </footer>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
