--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Portfolio</title>
+    <link rel="shortcut icon" href="/images/icon.ico" type="image/x-icon">
+    <title>Home</title>
 </head>
 <body class="page-content">
     <nav class="navbar navbar-expand-lg navbar-light menu">
@@ -21,10 +22,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Wie ben ik</a>
+                <a class="nav-link" href="/pages/about.html">Wie ben ik</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
@@ -33,13 +31,7 @@
                 <a class="nav-link" href="/pages/skills.html">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/softSkills.html">Ervaringen</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/pages/Portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/pages/contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -58,11 +50,9 @@
               Hallo, Ik ben Murrel Venlo
             </span> -->
              <span class="display-2--desc">
-              Ik ben student programmeur aan de Thomas more Hogeschool in Geel. Hier zal je meer te weten komen over mij... 
+              Ik ben student programmeur aan de Thomas more Hogeschool in Geel. <a href="/pages/about.html" style="text-decoration: none;"> <span class="hier">Hier</span></a> zal je meer te weten komen over mij... 
             </span>
-            <span class="cv">
-              <a href="/documents/cv.pdf" download="cv">Dowload hier mijn cv</a>
-            </span>
+            
             <!-- <a href="" id="/documents/cv.pdf" download="cv.pdf">Dowload mijn CV hier</a> -->
            </h1>
          </div>
@@ -74,22 +64,24 @@
        </div>
      </div>
    </section>
-   <footer class="foot">
-    <section class="ft-social">
-        <ul class="ft-social-list">
-          <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-        </ul>
-      </section>
-      <section class="ft-copy">
-        <div class="sec-copy">
-          <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
-        </div>
-      </section>
-</footer>
+   <div class="container">
+    <footer class="foot">
+      <section class="ft-social">
+          <ul class="ft-social-list">
+            <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+          </ul>
+        </section>
+        <section class="ft-copy">
+          <div class="sec-copy">
+            <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+          </div>
+        </section>
+  </footer>
+   </div>
     <script src="/js/index.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
