--- a/pages/about.html
+++ b/pages/about.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-sm-8 col-md-6 col-lg-8 part2">
                 <h3>Wie ben ik?</h3>
-                <p>Mijn naam is Murrel Jurmen venlo. Ik ben van Surinaamse afkomst, geboren in Paramaribo op 10 maarrt
+                <p>Mijn naam is Murrel Jurmen venlo. Ik ben van Surinaamse afkomst, geboren in Paramaribo op 10 maart
                     1992. <br>3 jaar geleden ben ik naar België gekomen om IT te studeren en mij te verdiepen in het programmeren. Ik heb deze keuze gemaakt omdat deze richting aan de universiteit van Paramaribo niet voldoende wordt aangeboden. <br>Ik woon in Laakdal aan de Oude
                     Tramlijn nr.3. <br> Je kan mij contacteren via </p>
                     <ul>
