--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="/images/icon.ico" type="image/x-icon">
+    <title>Home</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="images/" alt="">
+<body class="page-content">
+    <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <img src="images/LogoMj.png" alt="logo_mj" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,40 +22,67 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="/pages/about.html">Wie ben ik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Wie ben ik</a>
+                <a class="nav-link" href="/pages/hobby.html">Hobby's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Hobby's</a>
+                <a class="nav-link" href="/pages/skills.html">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Ervaringen</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="/pages/Portfolio.html">Portfolio</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <div class="container bg-light">
-        <div class="jumbotron">
-          <h1>Bootstrap Tutorial</h1>
-          <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
-          responsive, mobile-first projects on the web.</p>
-        </div>
-        <p>This is some text.</p>
-        <p>This is another text.</p>
-      </div>
-    
+   <!-- Welcome section -->
+   <section id="home" class="welcome">
+     <div class="container">
+       <div class="row">
+         <div class="col-md-6 secs">
+           <h1 class="display-2">
+             <span class="display-2--welcome">
+               Fawaka,<br> Ik ben<br> Murrel Venlo
+             </span>
+             <!-- <span class="display-2 test">
+              Hallo, Ik ben Murrel Venlo
+            </span> -->
+             <span class="display-2--desc">
+              Ik ben student programmeur aan de Thomas more Hogeschool in Geel. <a href="/pages/about.html" style="text-decoration: none;"> <span class="hier">Hier</span></a> zal je meer te weten komen over mij... 
+            </span>
+            
+            <!-- <a href="" id="/documents/cv.pdf" download="cv.pdf">Dowload mijn CV hier</a> -->
+           </h1>
+         </div>
+         <div class="col-md-6 secs text-center">
+           <div class="img-sec bg-img">
+           <img src="images/campnou.jpg" alt="afb_mj" class="rounded-circle img-style mask">
+          </div>
+         </div>
+       </div>
+     </div>
+   </section>
+   <div class="container">
+    <footer class="foot">
+      <section class="ft-social">
+          <ul class="ft-social-list">
+            <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+          </ul>
+        </section>
+        <section class="ft-copy">
+          <div class="sec-copy">
+            <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+          </div>
+        </section>
+  </footer>
+   </div>
+    <script src="/js/index.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
