Kleine aanpassingen aan about-page en portfolio.

--- a/pages/hobby.html
+++ b/pages/hobby.html
@@ -96,7 +96,7 @@
           <img class="card-img-top" src="/images/koken.jpeg" alt="koken">
           <div class="card-body">
             <h5 class="card-title">Koken</h5>
-            <p class="card-text">Wanneer ik iets lekkers heb bereid geeft me dit veel voldoening, zeker wanneer mijn
+            <p class="card-text">Wanneer ik iets lekkers heb bereid geeft me dit veel voldoening, zeker wanneer ik mijn
               disgenoten ook zie genieten van wat ik hen serveer.</p>
             <div class="text-center"><a href="#" class="btn text-center" data-bs-toggle="modal"
                 data-bs-target="#cooking-modal">Lees verder</a></div>
@@ -116,7 +116,7 @@
                 Natuurlijk kan ik al vele gerechten bereiden zonder dat ik nog een kookboek nodig heb, maar soms probeer
                 ik ook nieuwe gerechten uit.</p>
               <p>De voorbereiding aan het koken vind ik één van de leuke dingen. In de groentewinkel de beste
-                ingrediënten uitkiezen en de juiste kruiden vinden, dat is voor mij steeds een nieuwe boeiende en
+                ingrediënten uitkiezen en de juiste kruiden vinden, dat is voor mij steeds een nieuwe boeiende 
                 uitdaging. Ik vind het steeds fijn als ik kan aantonen dat ik met allerlei kleine dingen een lekker menu
                 kan bereiden.</p>
               <p>Vanuit mijn Surinaamse achtergrond weet ik hoe ik typische Surinaamse gerechten moet klaarmaken. Ik
