--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -168,7 +168,7 @@
                             <div class="portfolio-caption-heading">Chains of Charity</div>
                             <div class="portfolio-caption-subheading text-muted">Stageopdracht</div>
                         </div>
-                        <a href="#projectModal9" class="project-link" data-bs-toggle="modal">
+                        <a href="stage.html" class="project-link">
                             <div class="project-hover">
                                 <div class="hover-content text-center"><i class="fa fa-link"></i></div>
                             </div>
@@ -568,96 +568,6 @@
                             <p>Voor het onderhoud van de code heb ik ook een paar unit testjes moeten schrijven.</p>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
-                        <div class="col-12  text-center">
-                            <button class="btn btn-xl" data-bs-dismiss="modal" type="button">
-                                <i class="fas fa-xmark me-1"></i>
-                                Afsluiten
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- Portfolio item 9 modal popup-->
-    <div class="portfolio-modal modal fade" id="projectModal9" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen modal-fullscreen-sm-down">
-            <div class="modal-content p-content npx">
-                <div class="close-modal" data-bs-dismiss="modal"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="text-center"><h2>Stageopdracht</h2></div>
-                        <div class="text-center"><h3>Chains of Charity</h3></div>
-                        <h4>Achtergrondinformatie</h4>
-                        <p>Als stagiair bij Netropolix, had ik als opdracht om aan een webapplicatie te werken. Deze applicatie is bedoeld om bedrijven de mogelijkheid te geven elkaar te nomineren en alzo goede doelen te sponsoren.</p>
-                        <div class="col-sm-6 col-md-3">
-                            <div class="text-center">
-                                <img src="/images/analyserapport.png" class="img-fluid" alt="">
-                            </div>
-                            <h4>
-                              Voorbereiding
-                            </h4>
-                            <p>
-                              Als voorbereiding heb ik een usecase gemaakt. Aan de hand van de usecasebeschrijving heb ik rekening gehouden met de verwachtingen van de klant. Naar aanleiding van de functionaliteiten, heb ik een ERD-model kunnen samenstellen.
-                              Dit model bestaat uit 4 tabellen:
-                            </p>
-                            <ul>
-                                <li>charity</li>
-                                <li>Donation</li>
-                                <li>User</li>
-                                <li>Social platform</li>
-                            </ul>
-                          </div>
-                          <div class="col-sm-6 col-md-3">
-                            <div class="text-center">
-                                <img src="/images/sql.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h4>
-                              De Databank
-                            </h4>
-                            <p>
-                              Om verder te kunnen heb ik in "Microsoft Sequal Server Management" het datamodel vertaald naar de Database. 
-                            </p>
-                          </div>
-                          <div class="col-sm-6 col-md-3">
-                            <div class="text-center">
-                              <img src="/images/api4.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h4>
-                              De API
-                            </h4>
-                            <p>
-                              De API is gemaakt in .NET Core Web API. Dit onderdeel van C# had ik nog niet gebruikt, maar met mijn kennis van .NET framework was het vrij makkelijk om de CRUD-operaties toe te passen bij het uitschrijven van de API.</p>
-                          </div>
-                          <div class="col-sm-6 col-md-3">
-                            <div class="text-center">
-                                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img src="/images/w1.png" class="d-block w-100 img-fluid" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="/images/w2.png" class="d-block w-100 img-fluid" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="/images/w3.png" class="d-block w-100 img-fluid" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="/images/w4.png" class="d-block w-100 img-fluid" alt="...">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <h4>
-                              De Frontend
-                            </h4>
-                            <p>
-                              Zodra de API gebruiksklaar was, ben ik dan beginnen werken aan de webapplicatie. De applicatie werd gemaakt met de Javascript framework, Vue.js. Ik kon vrij werken met deze nieuwe framework, omdat het vergelijkbaar is met React.js.
-                            </p>
-                          </div>
-
                     <div class="row justify-content-center">
                         <div class="col-12  text-center">
                             <button class="btn btn-xl" data-bs-dismiss="modal" type="button">
