--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
             <div class="col-sm-8 col-md-6 col-lg-8 part2">
                 <h3>Wie ben ik?</h3>
                 <p>Mijn naam is Murrel Jurmen venlo. Ik ben van Surinaamse afkomst, geboren in Paramaribo op 10 maart
-                    1992. <br>3 jaar geleden ben ik naar België gekomen om IT te studeren en mij te verdiepen in het programmeren. Ik heb deze keuze gemaakt omdat deze richting aan de universiteit van Paramaribo niet voldoende wordt aangeboden. <br>Ik woon in Eindhout, Laakdal. <br> Wil je echt meer te weten komen over mij, dan je mij contacteren via: </p>
+                    1992. <br>3 jaar geleden ben ik naar België gekomen om IT te studeren en mij te verdiepen in het programmeren. Ik heb deze keuze gemaakt omdat deze richting aan de universiteit van Paramaribo niet voldoende wordt aangeboden. <br>Ik woon in Eindhout, Laakdal. <br> Wil je echt meer te weten komen over mij, dan kan je mij contacteren via: </p>
                     <ul>
                         <li>Telefoonnummer: 0494 24 48 07</li>
                         <li>e-mailadres: <a href="mailto:r0781309@student.thomasmore.be">r0781309@student.thomasmore.be</a></li>
