About-pagina veranderd.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var typed = new Typed(".auto-typing", {
-        strings: ["Murrel Venlo", "Software ontwikkelaar"],
+        strings: ["Murrel Venlo", "Junior Software Ontwikkelaar"],
         typeSpeed: 100,
         backSpeed: 100,
         loop: true
