--- a/pages/about.html
+++ b/pages/about.html
@@ -43,54 +43,40 @@
             </div>
         </div>
     </nav>
-    <div class="container height">
-        <div class="row">
-            <div class="col-sm-4 col-md-6 col-lg-4 part1">
-                <div class="text-center">
-                    <img src="/images/ik.jpg" class="img" alt="wie ben ik...">
-                </div>
-            </div>
-            <div class="col-sm-8 col-md-6 col-lg-8 part2">
-                <h3>Wie ben ik?</h3>
-                <p>Mijn naam is Murrel Jurmen venlo. Ik ben van Surinaamse afkomst, geboren in Paramaribo op 10 maart
-                    1992. <br>3 jaar geleden ben ik naar België gekomen om IT te studeren en mij te verdiepen in het programmeren. Ik heb deze keuze gemaakt omdat deze richting aan de universiteit van Paramaribo niet voldoende wordt aangeboden. <br>Ik woon in Eindhout, Laakdal. <br> Wil je echt meer te weten komen over mij, dan kan je mij contacteren via: </p>
-                    <ul>
-                        <li>Telefoonnummer: 0494 24 48 07</li>
-                        <li>e-mailadres: <a href="mailto:r0781309@student.thomasmore.be">r0781309@student.thomasmore.be</a></li>
-                        <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/">Mijn <span class="linkedin">LinkedIn</span></a></li>
-                        
-                    </ul>
-                    <span class="cv">
-                        <a href="/documents/cv.pdf" download="cv">Dowload hier mijn cv</a>
-                      </span>
-            </div>
-        </div>
-    </div>
     <div class="container">
-        <footer class="foot">
-            <section class="ft-social">
-                <ul class="ft-social-list">
-                    <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
-                    <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-                  </ul>
-            </section>
-            <section class="ft-copy">
-                <div class="sec-copy">
-                    <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
-                </div>
-            </section>
-        </footer>
-    </div>
-    <script src="/js/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+        <div class="row glas">
+            <div class="row" id="divResult"></div>
+        </div>
+        <div class="container">
+            <footer class="foot">
+                <section class="ft-social">
+                    <ul class="ft-social-list">
+                        <li><a href="https://www.facebook.com/profile.php?id=100003079420833" target="_blank"><i
+                                    class="fa fa-facebook-f"></i></a></li>
+                        <li><a href="https://twitter.com/venlomurrelpri" target="_blank"><i
+                                    class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/murrel_mj/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://github.com/venlomj"><i class="fa fa-github" target="_blank"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/murrel-venlo-6552bb135/" target="_blank"><i
+                                    class="fa fa-linkedin-square"></i></a></li>
+                    </ul>
+                </section>
+                <section class="ft-copy">
+                    <div class="sec-copy">
+                        <p>&copy; 2022 Ontwerper: Murrel Venlo</p>
+                    </div>
+                </section>
+            </footer>
+        </div>
+
+        <script src="/js/cv.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
