--- a/pages/stage.html
+++ b/pages/stage.html
@@ -144,6 +144,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="fifthHeading">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#fifthCollapse" aria-expanded="false" aria-controls="fifthCollapse">
+                            <h4>
+                                Nieuwe technieken
+                            </h4>
+                        </button>
+                    </h2>
+                    <div id="fifthCollapse" class="accordion-collapse collapse" aria-labelledby="fifthHeading"
+                        data-bs-parent="#accordionSection">
+                        <div class="accordion-body">
+                            <p>Ik heb ook tijdens nieuwe technieken bijgeleerd.<br>
+                            <ul>
+                                <li>In de Frontend programeren met de Javascript Framework, Vue.js.</li>
+                                <li>Een API maken in .NET Core.</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="text-center"><a class="btn  go-back" href="Portfolio.html">Terug</a></div>
