--- a/pages/stage.html
+++ b/pages/stage.html
@@ -157,7 +157,7 @@
                         data-bs-parent="#accordionSection">
                         <div class="accordion-body">
                             <p>Ik heb ook tijdens nieuwe technieken bijgeleerd.<br>
-                            <ul>
+                            <ul class="remove-bullet">
                                 <li>In de Frontend programeren met de Javascript Framework, Vue.js.</li>
                                 <li>Een API maken in .NET Core.</li>
                             </ul>
