Stage-pagina aangepast.

--- a/pages/stage.html
+++ b/pages/stage.html
@@ -53,7 +53,7 @@
                                 functionaliteiten, heb ik een ERD-model kunnen samenstellen.
                                 Dit model bestaat uit 4 tabellen:
                             </p>
-                            <ul>
+                            <ul class="remove-bullet">
                                 <li>charity</li>
                                 <li>Donation</li>
                                 <li>User</li>
@@ -149,19 +149,63 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#fifthCollapse" aria-expanded="false" aria-controls="fifthCollapse">
                             <h4>
-                                Nieuwe technieken
+                                Nieuwe vaardigheden en inzichten
                             </h4>
                         </button>
                     </h2>
                     <div id="fifthCollapse" class="accordion-collapse collapse" aria-labelledby="fifthHeading"
                         data-bs-parent="#accordionSection">
                         <div class="accordion-body">
-                            <p>Ik heb ook tijdens nieuwe technieken bijgeleerd.<br>
+                            <p>Tijdens mijn stage bij Netropolix heb ik nieuwe IT-programma’s en vaardigheden aangeleerd
+                                en toegepast.</p>
+                            <p>Ik heb kennis gemaakt met nieuwe programma’s uit de IT-wereld en heb geleerd om ze te
+                                gebruiken.</p>
+                            <p>Een bedrijf zoals Netropolix gebruikt ook haar eigen geschreven en aangepaste software of
+                                andere programma’s. Deze software en programma’s zijn meestal specifiek gericht op de
+                                service die het bedrijf levert aan de klanten.
+                                Ik vond het verfrissend en boeiend om nieuwe items onder de knie te krijgen. Zoals:
+                                <br>
                             <ul class="remove-bullet">
-                                <li>In de Frontend programeren met de Javascript Framework, Vue.js.</li>
-                                <li>Een API maken in .NET Core.</li>
+                                <li>Admind.WEB.Software (een software pakket voor online administratie) </li>
+                                <li>Programmeren in Vue.js</li>
+                                <li>Introductie van Vuetify</li>
+                                <li>Entity Framework Core</li>
+                                <li>Een API maken in .NET Core</li>
                             </ul>
+                            Het blijft een uitdaging om in IT te werken omdat je steeds nieuwe dingen mag en kan
+                            bijleren.
                             </p>
+                            <p>Ik heb ook de kans gekregen om ook andere dan specifieke IT- vaardigheden aan te leren en
+                                te gebruiken.</p>
+                            <h5>Het opstellen van ‘een Plan van Aanpak’</h5>
+                            <p>Ik heb geleerd dat door het opstellen van ‘een plan van aanpak’ het mezelf makkelijker
+                                maakt om de opgelegde doelen te bereiken.
+                                Het geeft ook mijn collega’s inzicht in zowel mijn werkmethode als de tijdslijn die ik
+                                heb uitgezet.
+                                Ik ervaarde wel dat ‘een plan van aanpak’ soms ook wel moet worden bijgestuurd en
+                                aangepast omwille van onverwachte voorvallen zoals dingen die meer tijd vragen of
+                                technische veranderingen. </p>
+
+                            <h5>Klantgericht werken</h5>
+                            <p>De feitelijke opdrachtgever van het project dat ik moest uitwerken was het marketingteam
+                                van Netropolix. Ik heb ervaren dat het belangrijk is om af te toetsen wat de concrete
+                                wensen zijn van de klant, met hen te overleggen en te evalueren en hun vraag zo goed
+                                mogelijk te realiseren om hun verwachtingen in te lossen.
+                                Bij de uitwerking van mijn project dacht ‘de klant’ meestal vanuit een visuele
+                                voorstelling, zij staan niet altijd stil bij de realiseerbaarheid en de moeilijkheden
+                                bij de uitwerking ervan. Dit was een goede leerschool voor mezelf: ‘klant is koning’ en
+                                ik als IT-er ben diegene die de juiste skills moet aanwenden om hun wensen te
+                                realiseren. Ik merk dat ik bij de uiteindelijke realisatie ook wel veel voldoening
+                                beleefde om te zien dat het uitgewerkte project enthousiast ontvangen werd. </p>
+
+                            <h5>Het ‘bijsturen’ van een project</h5>
+                            <p>Binnen de IT-wereld wordt er veel beroep gedaan op elkaars kennis en ervaring. In overleg
+                                gaan met mijn collega’s om op zoek te gaan naar oplossingen of inzicht te krijgen in de
+                                juiste afbakening van het project is ‘een must’. Door te overleggen binnen het team en
+                                met de experten verwierf ik zelf ook meer inzicht in de aanpak van problemen. Deze zijn
+                                niet altijd aan je eigen inzet en vaardigheden gerelateerd maar meestal aan onverwachte
+                                basic-factoren van programma’s.</p>
+
                         </div>
                     </div>
                 </div>
